--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "mimi_video_streaming.c"
+idf_component_register(SRCS "mimi_app_main.c"
                     INCLUDE_DIRS ".")
