Refactoring: mimi_common.h/c and mimi_camera.h/c

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,5 @@
-idf_component_register(SRCS "mimi_app_main.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS
+        "mimi_app_main.c"
+        "mimi_common.c"
+        "mimi_camera.c"
+        INCLUDE_DIRS ".")
