--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,4 +2,6 @@ idf_component_register(SRCS
         "mimi_app_main.c"
         "mimi_common.c"
         "mimi_camera.c"
+        "mimi_wifi.c"
+        "mimi_webserver.c"
         INCLUDE_DIRS ".")
