mimi_uart draft

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,4 +4,5 @@ idf_component_register(SRCS
         "mimi_camera.c"
         "mimi_wifi.c"
         "mimi_webserver.c"
+        "mimi_uart.c"
         INCLUDE_DIRS ".")
